# narvl-jax

./: .gitignore  AGENTS.md  README.md  pyproject.toml
narvl/: __init__.py  __main__.py
narvl/layers/: __init__.py  attention.py  feed_forward.py
narvl/models/: __init__.py  fastvit.py  mobileclip2.py
narvl/models/io/: __init__.py  mobileclip2.py
narvl/preprocess/: common.py  mscoco.py  sbu_captions.py
tests/: test_common.py  test_layers.py  test_mobileclip2.py  test_mscoco.py  test_narvl.py  test_sbu_captions.py
